// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displayInside renders 0 1`] = `
Array [
  .c0 {
  display-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 0;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders function 1`] = `
Array [
  .c0 {
  display-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: has;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: has;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders invalid theme path 1`] = `
Array [
  .c0 {
  display-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders negative number 1`] = `
Array [
  .c0 {
  display-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  display-inside: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-inside: July;
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  display-inside: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-inside: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-inside: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    display-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    display-inside: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    display-inside: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    display-inside: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    display-inside: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  display-inside: July;
}

@media May {
  .c0 {
    display-inside: August;
  }
}

@media April {
  .c0 {
    display-inside: September;
  }
}

@media January {
  .c0 {
    display-inside: November;
  }
}

@media April {
  .c0 {
    display-inside: August;
  }
}

@media June {
  .c0 {
    display-inside: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-inside: July;
}

@media May {
  .c0 {
    display-inside: August;
  }
}

@media April {
  .c0 {
    display-inside: September;
  }
}

@media January {
  .c0 {
    display-inside: November;
  }
}

@media April {
  .c0 {
    display-inside: August;
  }
}

@media June {
  .c0 {
    display-inside: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  display-inside: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-inside: November;
  }
}

@media April {
  .c0 {
    display-inside: January;
  }
}

@media January {
  .c0 {
    display-inside: December;
  }
}

@media April {
  .c0 {
    display-inside: April;
  }
}

@media June {
  .c0 {
    display-inside: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-inside: November;
  }
}

@media April {
  .c0 {
    display-inside: January;
  }
}

@media January {
  .c0 {
    display-inside: December;
  }
}

@media April {
  .c0 {
    display-inside: April;
  }
}

@media June {
  .c0 {
    display-inside: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    display-inside: July;
  }
}

@media April {
  .c0 {
    display-inside: August;
  }
}

@media January {
  .c0 {
    display-inside: September;
  }
}

@media April {
  .c0 {
    display-inside: November;
  }
}

@media June {
  .c0 {
    display-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    display-inside: July;
  }
}

@media April {
  .c0 {
    display-inside: August;
  }
}

@media January {
  .c0 {
    display-inside: September;
  }
}

@media April {
  .c0 {
    display-inside: November;
  }
}

@media June {
  .c0 {
    display-inside: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-inside: January;
  }
}

@media April {
  .c0 {
    display-inside: December;
  }
}

@media January {
  .c0 {
    display-inside: April;
  }
}

@media April {
  .c0 {
    display-inside: May;
  }
}

@media June {
  .c0 {
    display-inside: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    display-inside: January;
  }
}

@media April {
  .c0 {
    display-inside: December;
  }
}

@media January {
  .c0 {
    display-inside: April;
  }
}

@media April {
  .c0 {
    display-inside: May;
  }
}

@media June {
  .c0 {
    display-inside: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders postitive number 1`] = `
Array [
  .c0 {
  display-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders string 1`] = `
Array [
  .c0 {
  display-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: July;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: June;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: June;
}

<div
    className="c0"
  />,
]
`;

exports[`displayInside renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`displayInside renders valid theme path 1`] = `
Array [
  .c0 {
  display-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  display-inside: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
